header was added

--- a/index.html
+++ b/index.html
@@ -47,7 +47,9 @@
 
     <section class="main">
 
-        <h1 class="main__title">Find your Favourite recipes</h1>
+        <h1 class="main__title">Find your Favourite 
+            <span class="main__title-big">recipes</span>
+        </h1>
         <a href="#" class="main__button">get started</a>
         <p class="main__description">or send us your own recipes and <a href="#">get rewarded</a>!</p>
 
