header was added

--- a/index.html
+++ b/index.html
@@ -23,7 +23,8 @@
     <header class="header">
 
         <a href="/" class="logo"><!-- ссылка будет вести на главную страницу -->
-            <img src="images/logo.png" alt="Logo" class="logo__img">
+           <!-- лучше логотипы делать в svg. У нас все же логотип в png. В папке images лежат 2 логотипа разных размеров. Тот файл png что больше, он будет лучше виден, но и весить будет тоже больше при загрузке сайта. Чтобы решить этот вопрос с 2мя png картинками какой лучше, можно задать свойство srcset - он позволяет Браузеру самому решать какой логотип и с какими размерами предпочтительнее выбрать. Мы укажем одинарный размер 1х (оригинальный) и двойной размер 2х  --> 
+            <img src="images/logo.png" srcset="images/logo.png 1x, images/logo@2x.png 2x" alt="Logo" class="logo__img">
         </a>
 
         <nav class="menu">
